--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@keystatic/core": "^0.1.5",
     "@types/react": "^18.2.8",
     "@types/react-dom": "^18.0.11",
+    "aos": "^3.0.0-beta.6",
     "astro": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
