--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/react-dom": "^18.0.11",
     "aos": "^3.0.0-beta.6",
     "astro": "^3.0.3",
+    "marked": "^11.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
