--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "itaa site",
 	"type": "module",
 	"version": "6.9.9",
+	"private": true,
 	"scripts": {
 		"dev": "astro dev",
 		"start": "astro dev",
